--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-cayman
-title: Your Name
-description: Your personal academic website
+itheme: jekyll-theme-cayman
+title: Evianne Rovers
+description: CV website
