--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,3 @@
-itheme: jekyll-theme-cayman
-title: Home
+theme: jekyll-theme-cayman
+title: Evianne Rovers
 description: CV website
-
-# Evianne Rovers
